--- a/css/scss/sections/_header.scss
+++ b/css/scss/sections/_header.scss
@@ -15,6 +15,45 @@ header#nav {
   transition: .5s ease;
 }
 
+.navbar-links {
+  margin-left: 3rem;
+  ul {
+    list-style: none;
+  }
+}
+
+.main-navbar {
+  justify-content: space-between;
+  padding-top: var(--header-pt);
+  
+  /* Hide in mobile */
+  #navbar-links, .btn-signin {
+    display: none;
+  }
+  
+  /* Remove extra pixels on bottom of logo image */
+  .logo-img {
+    vertical-align: bottom;
+  }
+  
+  .navbar-right {
+    position: relative;
+  }
+  
+  .dm-text {
+    font-size: var(--fs-body-m);
+    font-weight: var(--fw-semi);
+    color: var(--color-gray-700);
+    margin-right: 1rem;
+    /* Hide on mobile */
+    display: none;
+  }
+  
+  .btn-signin {
+    margin-left: 2rem;
+  }
+}
+
 /* When visually hidden checkbox is in focus, put outline on toggle switch */
 body:has(.darkmode-checkboxes:focus-visible) .dm-toggle-switch {
   outline-color: var(--color-primary);
@@ -44,36 +83,4 @@ header#nav:has(#burger-toggle:checked) {
   }
   .burger-nav.reveal-aria {display: block;}
   .burger-nav.hide-aria {display: none;}
-}
-
-.main-navbar {
-  justify-content: space-between;
-  padding-top: var(--header-pt);
-  
-  /* Hide in mobile */
-  #navbar-links, .btn-signin {
-    display: none;
-  }
-
-  /* Remove extra pixels on bottom of logo image */
-  .logo-img {
-    vertical-align: bottom;
-  }
-  
-  .navbar-right {
-    position: relative;
-  }
-  
-  .dm-text {
-    font-size: var(--fs-body-m);
-    font-weight: var(--fw-semi);
-    color: var(--color-gray-700);
-    margin-right: 1rem;
-    /* Hide on mobile */
-    display: none;
-  }
-
-  .btn-signin {
-    margin-left: 2rem;
-  }
 }
