--- a/css/main.css
+++ b/css/main.css
@@ -840,6 +840,47 @@ section#hero {
   margin-top: 2rem;
 }
 
+section#how {
+  background-color: var(--color-how-bg);
+}
+
+.how-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.how-container .tablet, .how-container .desktop {
+  display: none;
+}
+.how-container h2 {
+  font-size: 1.75rem;
+  margin-top: 4rem;
+}
+.how-container .images-container {
+  display: flex;
+  margin-top: 2rem;
+}
+.how-container .images-container img {
+  max-width: 100%;
+}
+.how-container .image-description {
+  margin-top: 1.5rem;
+}
+.how-container .image-description h3 {
+  display: inline-block;
+  font-size: 1.375rem;
+  font-weight: var(--fw-extra);
+  line-height: 1.4;
+  width: 85%;
+}
+.how-container .image-description p {
+  font-size: var(--fs-body-m);
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+  /* Poor contrast, but according to design */
+  color: var(--color-gray-700);
+}
+
 @media (768px <= width) {
   /* Change margin & padding */
   :root {
