--- a/css/main.css
+++ b/css/main.css
@@ -980,6 +980,60 @@ section#payment {
   left: 135px;
 }
 
+section#reviews {
+  display: none;
+  background-color: var(--color-reviewsbg);
+}
+
+.reviews-container {
+  padding: 6rem 1.5rem 7rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  gap: 1.5rem;
+}
+.reviews-container h2 {
+  font-size: var(--fs-h1); /* 40px in figma */
+  font-weight: var(--fw-extra);
+  line-height: 1.3;
+}
+.reviews-container .review {
+  padding: 3rem 1.5rem 1.5rem;
+  background-color: var(--color-reviewbg);
+  border-radius: 8px;
+  box-shadow: 0px 2px 5px var(--color-gray-300);
+  position: relative;
+}
+.reviews-container .img-quote-icon {
+  position: absolute;
+  top: -22px;
+  left: 16px;
+}
+.reviews-container blockquote img {
+  margin-bottom: 1rem;
+}
+.reviews-container blockquote p {
+  font-size: var(--fs-body-l);
+}
+.reviews-container .author {
+  margin-top: 1.5rem;
+  display: flex;
+}
+.reviews-container .author-details {
+  margin-left: 1rem;
+}
+.reviews-container .author-details .author-name {
+  font-size: var(--fs-body-m);
+  font-weight: var(--fw-bold);
+  line-height: 1.6;
+  color: var(--color-heading);
+}
+.reviews-container .author-details .author-role {
+  font-size: var(--fs-body-s);
+  line-height: 1.6;
+  color: var(--color-reviewrole);
+}
+
 @media (768px <= width) {
   /* Change margin & padding */
   :root {
