--- a/css/scss/sections/_faqcontact.scss
+++ b/css/scss/sections/_faqcontact.scss
@@ -20,6 +20,10 @@
     line-height: 1.6;
   }
 
+  .faq-accordion p {
+    font-size: var(--fs-body-s);
+  }
+
   .contact {
     margin-top: 3.5rem;
     display: flex;
