--- a/css/scss/components/_burgermenu.scss
+++ b/css/scss/components/_burgermenu.scss
@@ -1,4 +1,4 @@
-// No point in building this using mixin since mixin wouldn't be used for anything else
+@use '../abstracts/' as *;
 
 .burger-menu {
   display: grid;
@@ -6,6 +6,13 @@
   grid-template-rows: 0fr;
   justify-content: center;
   transition: var(--transition-theme);
+
+  // Hide burgermenu in desktop
+  @include desktop {
+    grid-template-rows: 0fr !important;
+    box-shadow: unset !important;
+    display: none !important;
+  }
 
   .burger-nav {
     /* Add some padding to make sure there's room for focus border/outline */
@@ -43,6 +50,14 @@
   border: none;
   font-size: 1.5rem;
   color: var(--color-burger);
+
+  @include tablet {
+    margin-left: 5rem;
+  }
+  // In desktop, hide burgermenu button
+  @include desktop{
+    display: none;
+  }
 
   label {
     /* Add some padding to make it easier to click on touch devices */
